completar las paginas educacion y experiancia

--- a/FundamentosDeHtml_Antonio_Martinez/index.html
+++ b/FundamentosDeHtml_Antonio_Martinez/index.html
@@ -31,9 +31,9 @@
    <h2><strong>Nombre:</strong> Antonio Adolfo Martinez Carranza</h2>
    <h3><strong>Fecha Nacimiento:</strong> 27 de junio del 1995</h3>
    <h3><strong>Lugar Nacimiento:</strong> Monterrey, Nuevo le&oacute;n</h3>
-   <span><a href="">Inicio</a></span>
-   <span><a href="">Edicaci&oacute;n</a></span>
-   <span><a href="">Experiencia</a></span>
+   <span><a href="*">Inicio</a></span>
+   <span><a href="./educacion.html">Edicaci&oacute;n</a></span>
+   <span><a href="./experiencia.html">Experiencia</a></span>
 
    <h2>Informaci&oacute;n Personal</h2>
    <img src="" alt="">
